# SIGMOD-Contest2024

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  hash_table7.hpp  heap.h  io.h  neighbor.h  utils.h
include/hnswlib/: hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  visited_list_pool.h
include/quant/: fp32_quant.h  sq8_quant.h
src/: acorn.cpp  utils.cpp
